Move `skip to content` link to top; fix destination, z-index

--- a/themes/digital.gov/static/css/override.css
+++ b/themes/digital.gov/static/css/override.css
@@ -791,3 +791,7 @@ p.tribe-events-widget-link {
 .entry ul, .entry ol {
   margin-top: .5em;
 }
+
+.screen-reader-popup:focus {
+  z-index: 9999;
+}
